Fixed Footer Spacing

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -29,6 +29,11 @@ body {
     font-weight: 100;
 }
 
+.footersection {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
 .social-button {
     margin: 4px;
 }
